# rpn_calc

./: .dockerignore  CMakeLists.txt  dockerfile
.github/workflows/: ci.yml
html/: main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  rpn_8cpp.html  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8h_source.html
include/: rpn.h
latex/: main_8cpp.tex  main_8cpp__incl.md5  rpn_8cpp.tex  rpn_8cpp__incl.md5
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
